Update and rename Practica 1/estudios.html to Practica 1 /estudios.html

--- a/Practica 1 /estudios.html
+++ b/Practica 1 /estudios.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Curriculum</title>
+	<title>CURRICULUM</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="CSS/index.css">
 </head>
